--- a/04_training_practice.ipynb
+++ b/04_training_practice.ipynb
@@ -30,7 +30,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Iris 데이터셋 다운로드하기\n",
+        "from sklearn.datasets import load_iris\n",
+        "iris = load_iris(as_frame = True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "id": "txtyW7GzYjKs"
       },
@@ -51,11 +62,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 3,
       "metadata": {
         "id": "B8NGB8vxYjKs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'np' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m X_with_bias \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mc_[np\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(X)), X]\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          ]
+        }
+      ],
       "source": [
         "X_with_bias = np.c_[np.ones(len(X)), X]"
       ]
@@ -614,7 +637,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -628,7 +651,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.9"
+      "version": "3.12.1"
     },
     "nav_menu": {},
     "toc": {
